--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "node tools/run clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maxim Kurbatov <maksimkurb@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "fs-extra": "^4.0.1"
+  }
 }
