--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "node tools/run build",
     "clean": "node tools/run clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Maxim Kurbatov <maksimkurb@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "fs-extra": "^4.0.1"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-env": "^1.6.0",
+    "fs-extra": "^4.0.1",
+    "webpack": "^3.4.1"
   }
 }
