--- a/package.json
+++ b/package.json
@@ -7,16 +7,18 @@
   "scripts": {
     "build": "node tools/run build",
     "clean": "node tools/run clean",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Maxim Kurbatov <maksimkurb@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "fs-extra": "^4.0.1",
+    "jest": "^20.0.4",
     "webpack": "^3.4.1"
   }
 }
